2022-10-09

  * release v1.3.1

2022-10-08

  * Add optional 'directory' argument
  * release v1.3.0
  * remove '.git*' instead of '.github*' from the resulting pyromod

2022-10-07

  * Use proper versioning
  * All 1.x.x versions will point back to v1
  * release v1.2.1

2022-10-05

  * reduce size of action download
  * use package_mod as '-mod=' argument to optimize textures and
  animations better (see https://github.com/StanleySweet/package_mod)
  Thanks @StanleySweet
  * release v0.0.26.3

2022-09-25

  * remove .github* from the built pyromod file
  * release v1.1
  * fix docs related to the release action
  * release v1.2

2022-09-24

  * release v1